done tasks 13 and 14. no css added

--- a/index.html
+++ b/index.html
@@ -73,8 +73,63 @@
                         <li class="radio"><label>I don't know <input name="radio-buttons" value="1" type="radio" class="userChoice">
                             </label>
                         </li>
-
                     </ul>   
+                </div>
+            </div>
+
+            <div class="rowTab">
+                <div class="labels">
+                    <label for="yesOrNo">Should someone learn how to program?</label>
+                </div>
+                <div class="rightTab">
+                    <ul style="list-style: none">
+                            <li class="radio"><label>Yes<input name="radio-buttons" value="1" type="radio" class="userChoice">
+                            </label>
+                        </li>
+                        <li class="radio"><label>No<input name="radio-buttons" value="1" type="radio" class="userChoice">
+                            </label>
+                        </li>
+                        <li class="radio"><label>I don't know<input name="radio-buttons" value="1" type="radio" class="userChoice">
+                            </label>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="rowTab">
+                <div class="labels">
+                    <label for="preferences">Things you consider important in programming (check all that apply): </label>
+                </div>
+                <div class="rightTab">
+                    <ul id="preferences" style="list-style: none">
+                        <li class="checkbox">
+                            <label>
+                                <input name="prefer" value="1" type="checkbox" class="userRatings">Syntax only
+                            </label>
+                        </li>
+                        <li class="checkbox">
+                            <label>
+                                <input name="prefer" value="2" type="checkbox" class="userRatings">Problem solving
+                            </label>
+                        </li>
+                        <li class="checkbox">
+                            <label>
+                                <input name="prefer" value="3" type="checkbox" class="userRatings">Data structures
+                            </label>
+                        </li>
+                        <li class="checkbox">
+                            <label>
+                                <input name="prefer" value="4" type="checkbox" class="userRatings">Algorithms
+                            </label>
+                        </li>
+                        <li class="checkbox">
+                            <label>
+                                <input name="prefer" value="5" type="checkbox" class="userRatings">Design patterns 
+                            </label>
+                        </li>
+                        
+
+                    </ul>
                 </div>
             </div>
         </form>
