finished the index.html. added css. updated readme

--- a/index.html
+++ b/index.html
@@ -127,11 +127,20 @@
                                 <input name="prefer" value="5" type="checkbox" class="userRatings">Design patterns 
                             </label>
                         </li>
-                        
-
                     </ul>
                 </div>
             </div>
+
+            <div class="rowTab">
+                <div class="labels">
+                    <label for="comments">Any comments or suggestions?</label>
+                </div>
+                <div class="rightTab">
+                    <textarea id="comments" class="input-field" style="height: 50px; resize: vertical;"
+                    name="comment" placeholder="Write your comments or suggestions here..."></textarea>
+                </div>
+            </div>
+            <button id="submit" type="submit">Submit</button>
         </form>
     </div>
     
